objects/ssot__Individual__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdvancementGraduationDate__c</fullName>
        <label>Advancement Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageOrderAmount__c</fullName>
        <label>Average Order Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BirthDateDay__c</fullName>
        <label>Birth Date Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BirthDateMonth__c</fullName>
        <label>Birth Date Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BirthDateYear__c</fullName>
        <label>Birth Date Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BirthPlace__c</fullName>
        <label>Birth Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CanStorePIIElsewhere__c</fullName>
        <label>OK To Store PII Data Elsewhere</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChildrenCount__c</fullName>
        <label>Children Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ConsumerCreditScoreProviderName__c</fullName>
        <label>Consumer Credit Score Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsumerCreditScore__c</fullName>
        <label>Consumer Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ConvictionsCount__c</fullName>
        <label>Convictions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventId__c</fullName>
        <label>Creation Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventObject__c</fullName>
        <label>Creation Event Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentEmployerName__c</fullName>
        <label>Current Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeathDate__c</fullName>
        <label>Death Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DeathPlace__c</fullName>
        <label>Death Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DependentCount__c</fullName>
        <label>Dependent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DoExtractMyDataUpdateDate__c</fullName>
        <label>Do Extract My Data Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DoForgetMeFromUpdateDate__c</fullName>
        <label>Do Forget Me Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DoNotMarketFromUpdateDate__c</fullName>
        <label>Do Not Market Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DoNotProcessFromUpdateDate__c</fullName>
        <label>Do Not Process Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DoNotProcessReasonId__c</fullName>
        <label>Do Not Process Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoNotProcessReason__c</fullName>
        <label>[DoNotUse]Do Not Process Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoNotProfileFromUpdateDate__c</fullName>
        <label>Do Not Profile Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DoNotTrackLocationUpdateDate__c</fullName>
        <label>Do Not Track Location Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DoNotTrackUpdateDate__c</fullName>
        <label>Do Not Track Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DoesPreferSustainableProduct__c</fullName>
        <label>Prefer Sustainable Product</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EducationalAdvancementType__c</fullName>
        <label>Educational Advancement Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployedSinceDate__c</fullName>
        <label>Employed Since Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EthnicityId__c</fullName>
        <label>Ethnicity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenderId__c</fullName>
        <label>Gender</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenderIdentity__c</fullName>
        <label>Gender Identity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenerationalCohort__c</fullName>
        <label>Generational Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GlobalPartyId__c</fullName>
        <label>Global Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationAchievement__c</fullName>
        <label>Graduation Achievement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationCohort__c</fullName>
        <label>Graduation Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasAlcoholAbuseHistory__c</fullName>
        <label>Has Alcohol Abuse History</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasDrugAbuseHistory__c</fullName>
        <label>Has Drug Abuse History</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasFerpaParentalDisclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FERPA Parental Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasFerpaThrdPtyDisclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FERPA Third-Party Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasOptedOutGeoTracking__c</fullName>
        <label>Block Geolocation Tracking</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasOptedOutProcessing__c</fullName>
        <label>Do Not Process</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasOptedOutProfiling__c</fullName>
        <label>Do Not Profile</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasOptedOutSolicit__c</fullName>
        <label>Do Not Solicit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasOptedOutTracking__c</fullName>
        <label>Do Not Track</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HighestEducationLevelId__c</fullName>
        <label>Highest Education Level</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HospitalizationsLast5YearsCount__c</fullName>
        <label>Hospitalizations Last 5 Years Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Individual Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InfluencerRating__c</fullName>
        <label>Influencer Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAlcoholConsumer__c</fullName>
        <label>Is Alcohol Consumer</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAnonymous__c</fullName>
        <label>Is Anonymous</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDrugConsumer__c</fullName>
        <label>Is Drug Consumer</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsFirstGenerationStudent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is First Generation Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsGoodDriver__c</fullName>
        <label>Is Good Driver</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGoodStudent__c</fullName>
        <label>Is Good Student</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHighRiskHobby__c</fullName>
        <label>Is High Risk Hobby</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHighRiskOccupation__c</fullName>
        <label>Is High Risk Occupation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHomeOwner__c</fullName>
        <label>Is Home Owner</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTobaccoConsume__c</fullName>
        <label>Is Tobacco Consumer</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationText__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MailingName__c</fullName>
        <label>Mailing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MainDietaryHabitTypeId__c</fullName>
        <label>Main Dietary Habit Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MainDisabilityTypeId__c</fullName>
        <label>Main Disability Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MainLifeAttitudeTypeId__c</fullName>
        <label>Main Life Attitude Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MainLifeStyleTypeId__c</fullName>
        <label>Main Life Style Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MainPersonalValueTypeId__c</fullName>
        <label>Main Personal Value Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MainPersonalityTypeId__c</fullName>
        <label>Main Personality Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MajorCitationCount__c</fullName>
        <label>Major Citation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MaritalStatusId__c</fullName>
        <label>Marital Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MilitaryBranch__c</fullName>
        <label>Military Branch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MilitaryServiceId__c</fullName>
        <label>Military Service</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MilitaryStatusId__c</fullName>
        <label>Military Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MinorCitationCount__c</fullName>
        <label>Minor Citation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MothersMaidenName__c</fullName>
        <label>Mothers Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NameSuffix__c</fullName>
        <label>Name Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NoMergeReasonId__c</fullName>
        <label>No Merge Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupationTypeId__c</fullName>
        <label>Occupation Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OfficialName__c</fullName>
        <label>Official Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderingName__c</fullName>
        <label>Ordering Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginCountryId__c</fullName>
        <label>Origin Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OverAgeNumber__c</fullName>
        <label>Over Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PartyAdditionalNames__c</fullName>
        <label>PartyAdditionalNames relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoles__c</fullName>
        <label>PartyRoles relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyTypeId__c</fullName>
        <label>Party Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyWebAddresses__c</fullName>
        <label>PartyWebAddresses relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonEducations__c</fullName>
        <label>PersonEducations relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonEmployments__c</fullName>
        <label>PersonEmployments relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonHeightUnitofMeasureId__c</fullName>
        <label>Person Height Unit of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonHeight__c</fullName>
        <label>Person Height</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PersonLanguages__c</fullName>
        <label>PersonLanguages relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonLifeEvents__c</fullName>
        <label>PersonLifeEvents relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonLifeStageId__c</fullName>
        <label>Secondary Citizenship Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonLifeStage__c</fullName>
        <label>Person Life Stage</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonName__c</fullName>
        <label>Person Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonWeightUnitofMeasureId__c</fullName>
        <label>Person Weight Unit of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonWeight__c</fullName>
        <label>Person Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PhotoURL__c</fullName>
        <label>Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAccountId__c</fullName>
        <label>Primary Account</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAddressId__c</fullName>
        <label>Primary Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCitizenshipCountryId__c</fullName>
        <label>Primary Citizenship Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCitizenshipCountry__c</fullName>
        <label>[DoNotUse]Primary Citizenship Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCitizenshipType__c</fullName>
        <label>Primary Citizenship Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryHobbyId__c</fullName>
        <label>Primary Hobby</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryHobby__c</fullName>
        <label>[DoNotUse]Primary Hobby</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryHouseholdId__c</fullName>
        <label>Primary Household</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryLanguageId__c</fullName>
        <label>Primary Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryLanguage__c</fullName>
        <label>[DoNotUse]Primary Language</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Pronoun__c</fullName>
        <label>Pronoun</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Race__c</fullName>
        <label>Race</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReligionId__c</fullName>
        <label>Religion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Religion__c</fullName>
        <label>[DoNotUse]Religion</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResidenceCaptureMethodId__c</fullName>
        <label>Residence Capture Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResidenceCaptureMethod__c</fullName>
        <label>[DoNotUse]Residence Capture Method</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResidenceCountryId__c</fullName>
        <label>Residence Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResidenceCountryName__c</fullName>
        <label>Residence Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResidenceCountry__c</fullName>
        <label>[DoNotUse]Residence Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Salutation__c</fullName>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondLastName__c</fullName>
        <label>Second Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryCitizenshipCountryId__c</fullName>
        <label>Secondary Citizenship Country Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryCitizenshipCountry__c</fullName>
        <label>[DoNotUse]Secondary Citizenship Country</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryCitizenshipType__c</fullName>
        <label>Secondary Citizenship Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SendIndividualData__c</fullName>
        <label>Export Individual's Data</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldForget__c</fullName>
        <label>Forget This Individual</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurgeriesLast5YearsCount__c</fullName>
        <label>Surgeries Last 5 Years Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxBracketRange__c</fullName>
        <label>Tax Bracket Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TitleName__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebSiteURL__c</fullName>
        <label>Web Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WeddingAnniversaryDate__c</fullName>
        <label>Wedding Anniversary Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__YearlyIncomeCurrencyId__c</fullName>
        <label>Yearly Income Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__YearlyIncomeCurrency__c</fullName>
        <label>[DoNotUse]Yearly Income Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__YearlyIncomeRangeId__c</fullName>
        <label>Yearly Income Range</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__YearlyIncomeRange__c</fullName>
        <label>[DoNotUse]Yearly Income Range</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__YearlyIncome__c</fullName>
        <label>Yearly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761151778_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_Individual_PrimaryAcc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_Individual_PrimaryAcc_rel</relationshipLabel>
        <relationshipName>rel_1697761151778_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761177549_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual_PrimaryAccountId_map_Acco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Individual_PrimaryAccountId_map_Acco_rel</relationshipLabel>
        <relationshipName>rel_1697761177549_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>